Fixed base path

--- a/views/404.njk
+++ b/views/404.njk
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>404 - Страница не найдена</h1>
-    <a href="/">На главную</a>
+    <a href="/demo/skillnotes">На главную</a>
+    {# <a href="/">На главную</a> #}
 </body>
 </html>
