--- a/views/_layout.njk
+++ b/views/_layout.njk
@@ -16,7 +16,7 @@
       {% block content %}{% endblock %}
     </section>
     <script>
-      const basePath = '/';
+      const basePath = '/demo/skillnotes';
       if (window.location.pathname.endsWith('login')) {
         window.history.replaceState({}, document.title, basePath);
       }
