Fixed base path in views

--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -21,7 +21,7 @@
         {% endif %}
       </div>
       <ul class="uk-navbar-nav">
-        <li><a href="/logout">Выход</a></li>
+        <li><a href="/{{ basePath }}/logout">Выход</a></li>
       </ul>
     </div>
   </nav>
