Fixed views base path

--- a/views/index.njk
+++ b/views/index.njk
@@ -17,7 +17,7 @@
   {% endif %}
 
   <h2>Войти</h2>
-  <form method="POST" action="/{{ basePath }}/login" enctype="application/x-www-form-urlencoded">
+  <form method="POST" action="{{ basePath }}login" enctype="application/x-www-form-urlencoded">
     <p><input type="text" name="username" class="uk-input"></p>
     <p><input type="password" name="password" class="uk-input"></p>
     <p><button class="uk-button uk-button-primary">Вход</button></p>
@@ -27,7 +27,7 @@
   <hr class="uk-divider-icon" />
 
   <h2>Зарегистрироваться</h2>
-  <form method="POST" action="/{{ basePath }}/signup" enctype="application/x-www-form-urlencoded">
+  <form method="POST" action="{{ basePath }}signup" enctype="application/x-www-form-urlencoded">
     <p><input type="text" name="username" class="uk-input"></p>
     <p><input type="password" name="password" class="uk-input"></p>
     <p><button class="uk-button uk-button-primary">Создать аккаунт</button></p>
