--- a/views/dashboard.njk
+++ b/views/dashboard.njk
@@ -8,7 +8,7 @@
 </style>
 
 <link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
-<link rel="stylesheet" href="/bundle.css" />
+<link rel="stylesheet" href="{{ basePath }}bundle.css" />
 {% endblock %}
 
 {% block content %}
@@ -28,5 +28,5 @@
 
   <div id="main"></div>
 
-  <script src="/bundle.js"></script>
+  <script src="{{ basePath }}bundle.js"></script>
 {% endblock %}
