--- a/views/404_env.njk
+++ b/views/404_env.njk
@@ -7,7 +7,6 @@
 </head>
 <body>
     <h1>404 - Страница не найдена</h1>
-    <a href="/demo/skillnotes">На главную</a>
-    {# <a href="/">На главную</a> #}
+    <a href="$BASE_PATH">На главную</a>
 </body>
 </html>
