Fixed favicon base path

--- a/views/404_env.njk
+++ b/views/404_env.njk
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/demo/skillnotes/favicon.ico">
+    <link rel="icon" href="$BASE_PATHfavicon.ico">
     <title>404 - Страница не найдена</title>
 </head>
 <body>
