--- a/views/_layout_env.njk
+++ b/views/_layout_env.njk
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/fontawesome.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/brands.min.css" />
-    <link rel="icon" href="/demo/skillnotes/favicon.ico">
+    <link rel="icon" href="$BASE_PATHfavicon.ico">
     {% block style %}{% endblock %}
   </head>
   <body>
