Optimized container start

--- a/views/404.njk
+++ b/views/404.njk
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="${BASE_PATH}favicon.ico">
+    <link rel="icon" href="{{ basePath }}favicon.ico">
     <title>404 - Страница не найдена</title>
 </head>
 <body>
     <h1>404 - Страница не найдена</h1>
-    <a href="$BASE_PATH">На главную</a>
+    <a href="{{ basePath }}">На главную</a>
 </body>
 </html>
